--- a/KohaneMatt_R_Assignment.Rmd
+++ b/KohaneMatt_R_Assignment.Rmd
@@ -7,12 +7,20 @@ output: html_document
 
 #Package Installation
 ```{r}
+if (!require("filesstrings")) install.packages("filesstrings")
+library(filesstrings)
+if (!require("reshape2")) install.packages("reshape2")
+library("reshape2")
+if (!require("ggplot2")) install.packages("ggplot2")
+library(ggplot2)
+if (!require("plyr")) install.packages("plyr")
+library(plyr)
+if (!require("tidyr")) install.packages("tidyr")
+library(tidyr)
 if (!require("tidyverse")) install.packages("tidyverse")
 library(tidyverse)
-library(tidyr)
-library(ggplot2)
-library(dplyr)
-library(forcats)
+install.packages("viridis")  # Install
+library("viridis")           # Load
 ```
 
 
@@ -23,14 +31,12 @@ library(forcats)
 fang = read.delim("fang_et_al_genotypes.txt", header = TRUE, sep = "\t")
 snp_pos <- read.delim("snp_position.txt", header = TRUE, sep = "\t")
 
+
 #Alternative Assignment import:
 snp_pos1 <- read.delim("https://raw.githubusercontent.com/EEOB-BioData/BCB546X-Fall2019/master/assignments/UNIX_Assignment/snp_position.txt", header = TRUE, sep ="\t")
-
-
 fang1 <- read.delim("https://raw.githubusercontent.com/EEOB-BioData/BCB546X-Fall2019/master/assignments/UNIX_Assignment/fang_et_al_genotypes.txt", header = TRUE,sep = "\t")
 
-
-
+##Notes
 #Use Relative path: ./data/maize.output for example.
 #pivot_longer(-SampleID, names_to = "SNPname", values_to = "SNPvalue")
 
@@ -69,7 +75,7 @@ object.size(fang) #12163888 bytes
 
 #Transposition of fang file
 ```{r}
-transposed_fang <- t(fang)
+transposed_fang <- as.data.frame(t(fang[,-1]))
 ```
 
 #Tranposition of both maize and teosinte data
@@ -120,12 +126,9 @@ setwd("./maize")
 
 getwd()
 
-file.move("C:\Users\mjkoh\Desktop\BCB546x\KohaneMatt_BCB546_Assignments\KohaneMatt_R_Assignment/file:///C:/Users/mjkoh/Desktop/BCB546x/KohaneMatt_BCB546_Assignments/KohaneMatt_R_Assignment/maize_chr1_for.txt", "C:\Users\mjkoh\Desktop\BCB546x\KohaneMatt_BCB546_Assignments\KohaneMatt_R_Assignment\maize")
-
-
 #File creation, this is where loops are handy but hardcoding can work too.
 
-#
+#maize data, increasing direction
 maize_complete %>% arrange(Chromosome, Position) %>% filter(Chromosome == 1) %>% write.table("maize_chr1_inc.txt", sep="\t",col.names = FALSE, row.names = FALSE, quote = FALSE)
 maize_complete %>% arrange(Chromosome, Position) %>% filter(Chromosome == 2) %>% write.table("maize_chr2_inc.txt", sep="\t",col.names = FALSE, row.names = FALSE, quote = FALSE)
 maize_complete %>% arrange(Chromosome, Position) %>% filter(Chromosome == 3) %>% write.table("maize_chr3_inc.txt", sep="\t",col.names = FALSE, row.names = FALSE, quote = FALSE)
@@ -192,11 +195,9 @@ teosinte_complete %>% arrange(Chromosome, desc(Position)) %>% filter(Chromosome 
 
 #maize:
 ```{r}
-
 maize_correct <- data.frame(lapply(maize_complete, as.character), stringsAsFactors = FALSE)
 maize_correct <- sapply(maize_correct, function(x) {x <- gsub("?", "-", x, fixed = TRUE)})
 maize_correct <- as.data.frame(maize_correct)
-
 
 #Conducting this on all chromosomes:
 maize_correct %>% arrange(Chromosome, desc(Position)) %>% filter(Chromosome == 1) %>% write.table("maize_chr1_dec.txt", sep="\t",col.names = FALSE, row.names = FALSE)
@@ -240,37 +241,23 @@ teosinte_correct %>% arrange(Chromosome, desc(Position)) %>% filter(Chromosome =
 #Data Visualization through plotting:
 
 ```{r}
-library(reshape2)
-library(dplyr)
-library(tidyverse)
-library(tidyr)
-install.packages("tidyr")
-devtools::install_github("tidyverse/tidyr")
-
 melt(maize_complete)
 melt(teosinte_complete)
-
-
-plot_genotypes <- filter(fang, Group %in% c('ZMMMR','ZMMIL', 'ZMMLR', 'ZMPBA', 'ZMPIL', 'ZMPJA')) %>% column_to_rownames(., var = "Sample_ID") 
-ggplot(data = plot_genotypes) + geom_bar(mapping=aes(x=Group)) 
-#This plot visualizes the 
-
-plot_genotypes$
-
-ggplot(data=maize_tidy, aes(x=Geno)) + geom_bar() + facet_wrap(~ Chromosome)
-
-#I could not get the pivot_longer function to be recognized in my R client, if your R recognizes it, you can go ahead and run the below lines to tidy the data for plotting!
-
-maize_plot_data <- maize_complete %>% pivot_longer(-Row.names:-Position, names_to = "Sample_ID", values_to = "Values") 
-
-teosinte_plot_data <- teosinte_complete %>% pivot_longer(-Row.names:-Position, names_to = "Sample_ID", values_to = "Values")
 ```
+##Number of SNPs per chromosome
+```{r}
+colnames(transposed_fang) <- fang$Sample_ID
+genotypes_plotting <- merge(x = snp_pos, y = transposed_fang, by.x = "SNP_ID", by.y ="row.names", all.y = TRUE)
+genotypes_plotting$Chromosome <- factor(genotypes_plotting$Chromosome, levels = c(1:10, "multiple", "unknown", "NA"))
+Chromosome_counts <- ggplot(genotypes_plotting, aes((Chromosome))) + geom_bar(stat=) + ggtitle("Chromosomes and SNP Count") + theme_classic()
+Chromosome_counts
 
+ggplot(fang, aes(Group, fill = )) + geom_bar() + ggtitle("Group SNP Count")  
+ggplot(data = plot_genotypes) + geom_bar(mapping=aes(x=Group)) + ggtitle("Group SNP Count") 
+#These plots visualize the count of SNPs per group in our genotypes data.
+```
 #Visualizations:
 ```{r}
-
-install.packages("viridis")  # Install
-library("viridis")           # Load
 
 sp <- ggplot(maize_complete, aes(Position, Chromosome)) + 
   geom_point(aes(color = Chromosome)) +
@@ -278,94 +265,59 @@ sp <- ggplot(maize_complete, aes(Position, Chromosome)) +
   theme(legend.position = "top")
 sp
 
-ggplot(maize_complete, aes(Position, Chromosome))+
+sp1 <- ggplot(genotypes_plotting, aes(Position, Chromosome)) + 
   geom_point(aes(color = Chromosome)) +
-  geom_smooth(aes(color = Chromosome, fill = Chromosome), method = "lm") + 
-  scale_color_viridis(discrete = TRUE, option = "D")+
-  scale_fill_viridis(discrete = TRUE) +
-  theme_minimal() +
-  theme(legend.position = "bottom")
+  theme_minimal()+
+  theme(legend.position = "top")
+sp1
 
 
-maize_complete$
+
+#A few initial visualization, I think they are the exact same:
+ggplot(data = genotypes_plotting) + geom_point(mapping = aes(x=Chromosome, y =Position))
 
 ggplot(data = maize_complete) + geom_bar(mapping=aes(x=Chromosome, color = Chromosome))
-
-
 ggplot(data = maize_complete) + geom_density(mapping=aes(x=Chromosome, color = Chromosome))
 
-ggplot(data = plot_genotypes) + geom_bar(mapping=aes(x=Group)) #This is my plot of choice.
-ggplot(data=maize_complete, aes(x=Chromosome)) + geom_bar() + facet_wrap(~ Chromosome)
 
-maize_complete$
+ggplot(data = teosinte_complete) + geom_bar(mapping=aes(x=Chromosome, color = Chromosome))
+ggplot(data = teosinte_complete) + geom_density(mapping=aes(x=Chromosome, color = Chromosome))
 
-  
-ggplot(data = MergedCombinedFiltered) + 
-  geom_density(mapping=aes(x = PositionRange, fill = Chromosome), alpha = 0.15) +
-  ggtitle("SNP density on its position on the chromosome") +
-  theme(axis.text.x=element_blank())
-  
+
+ggplot(data = genotypes_plotting) + geom_bar(mapping=aes(x=Chromosome, color = Chromosome))
+ggplot(data = genotypes_plotting) + geom_density(mapping=aes(x=Chromosome, color = Chromosome))
 ```
 
-
+#More in-depth analysis and visualization
 ```{r}
-data(mtcars)
-mtcars_wide1 <- mtcars %>% 
-  pivot_wide(names_from = "am", values_from = "mpg")
-
+headers <- colnames(fang)[-c(1:3)]
+geno_melt <- melt(fang, measure.vars = headers)
 ```
 
-
-
-
+#Setting values that are missing to NA and determining whether site is homozygous or heterozygous.
 ```{r}
-#Filter the fang file for the necessary groups, similar to "grep" in Unix.
-maize <- filter(fang, Group %in% c('ZMPBA', 'ZMPIL', 'ZMPJA'))
-teosinte <- filter(fang, Group %in% c('ZMMIL', 'ZMMLR', 'ZMMMR'))
-
-#Checking to make sure correct groups have been selected, looks good.
-head(maize)
-head(teosinte)
-
-#Checking unique groups in the columns for assurance.
-unique(maize$Group)
-unique(teosinte$Group)
-#So far so good.
-
-#Filtering the data for the needed columns
-maize <- maize %>% select(1, 4:986)
-teosinte <- teosinte %>% select(1, 4:986)
-snp_pos <- snp_pos %>% select(1,3,4)
-
-#Rewriting the maize and teo data to a dataframe without headers so to be efficient for downstream
-transposed_maize <- as.data.frame(t(maize))
-transposed_teo <- as.data.frame(t(teosinte))
-
-
-write_csv(transposed_maize, "MaizeData", col_names = FALSE)
-write_csv(transposed_teosinte, "TeosinteData", col_names = FALSE)
-
-maizeData2 <- read_csv("MaizeData", col_names = TRUE)
-teoData2 <- read_csv("TeosinteData", col_names = TRUE)
-
-Sample_ID <- snp %>% select(1)
-
-maize3 <- cbind(Sample_ID, maizeData2)
-teo3 <- cbind(Sample_ID, teoData2)
-transposed_fang
-
-
-#Transpose the fang file, this is much easier in R than in Unix command line.
-transposed_fang <- t(fang)
-
+geno_melt[ geno_melt == "?/?" ] = NA
+geno_melt$isHomozygous <- (geno_melt$value=="A/A" | geno_melt$value=="C/C" | geno_melt$value=="G/G" | geno_melt$value=="T/T")
 
 ```
 
-
+#Order by identity and group
 ```{r}
+identities <- geno_melt[order(geno_melt$Sample_ID),]
+groups <- geno_melt[order(geno_melt$Group),]
+
 
 ```
 
+#Setting up plots for both identities and groups
+```{r}
+identities_count <- ddply(genotypes_by_ID, c("Sample_ID"), summarise,counting_heterozygous=sum(!isHomozygous, na.rm=TRUE), counting_homozygous=sum(isHomozygous, na.rm=TRUE),  isNA=sum(is.na(isHomozygous)))
+counting_ID_melt <- melt(identities_count, measure.vars = c("counting_homozygous", "counting_heterozygous", "isNA"))
+plotFinal1 <- ggplot(counting_ID_melt,aes(x = Sample_ID, y= value, fill=variable)) + geom_bar(stat = "identity", position = "stack") + ggtitle("Heterozygosity, Homozygosity and Missing Data") + theme_bw()  + scale_fill_brewer(palette="Set3") 
+plotFinal1
 
-
-
+groups_count <- ddply(genotypes_by_Group, c("Group"), summarise, counting_homozygous=sum(isHomozygous, na.rm=TRUE), counting_heterozygous=sum(!isHomozygous, na.rm=TRUE), isNA=sum(is.na(isHomozygous)))
+counting_Group_melt <- melt(groups_count, measure.vars = c("counting_homozygous", "counting_heterozygous", "isNA"))
+plotFinal2 <-  ggplot(counting_Group_melt,aes(x = Group, y= value, fill=variable)) + geom_bar(stat = "identity", position = "fill") + ggtitle("Heterozygosity and Missing Data ") + theme_classic()   + scale_fill_brewer(palette="Set3") 
+plotFinal2
+```
